--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
-<html>
-  <head>
-    <body>
-      <h1>welcome to backbencher boys</h1>
-    </body>
-  </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Welcome to Backbencher boys Group</h1>
+</body>
 </html>
